# NBodySolver

./: .tasks  BakedAssocLaguerre.h  CMakeLists.txt  ConfigParser.h  DebugHelper.h  FileContentIO.h  FunctorHelpers.h  GregorianTime.h  KeplerianOrbit.h  MathUtils.h  OBJFileWriter.h  Optional.h  ProgressBar.h  README.md  RungeKuttaKernel.h  ScopeProfiler.h  SolarSystem.h  SphericalCoordinate.h  Vector3.h  geopot.inl  main.cpp  test.cfg
mini_solar_system/: BakedAssocLaguerre.h  gravity_model.cfg  initial_state_jd_2433282_500000000.cfg
real_solar_system/: gravity_model.cfg  initial_state_jd_2433282_500000000.cfg  sol_numerics_blueprint.cfg
